--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "bulma": "^0.9.4",
     "cross-env": "~7.0.3",
     "express": "~4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sequelize": "^6.36.0",
     "tsx": "~4.7.0",
     "typescript": "~5.3.3",
     "vite-express": "^0.15.0"
